# implus

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: imgui.cmake
compat/: CMakeLists.txt  compat.hpp  ranges  readme.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/implus/: accelerator.hpp  alignment.hpp  application.hpp  arithmetics.hpp  badge.hpp  balloontip.hpp  banner.hpp  blocks.hpp  button.hpp  buttonbar.hpp  callback.hpp  checkbox.hpp  color.hpp  combo.hpp  commands.hpp  content.hpp  dbgw.hpp  dlg-common.hpp  dlg.hpp  dropdown.hpp  flow.hpp  font-ranges.hpp  font.hpp  geometry.hpp  host-render.hpp  host-storage.hpp  host.hpp  icd.hpp  icon.hpp  id.hpp  input.hpp  interact.hpp  itemizer.hpp  length.hpp  listbox.hpp  menu.hpp  navigation.hpp  overridable.hpp  pagination.hpp  pane.hpp  (+15 more)
include/implus/demo/: demo.hpp  editables.hpp
lbrk/: CMakeLists.txt  lbrk-utf8.hpp  lbrk.cpp  lbrk.hpp
lbrk/tests/: CMakeLists.txt  test_lbrk.cpp
src/: accelerator.cpp  application.cpp  arithmetics.cpp  badge.cpp  balloontip.cpp  banner.cpp  blocks.cpp  button.cpp  buttonbar.cpp  checkbox.cpp  color.cpp  combo.cpp  commands.cpp  dbgw.cpp  dlg-common.cpp  dlg.cpp  dropdown.cpp  flow.cpp  font-apple.mm  font-common.cpp  font-fontconfig.cpp  font-gnome.cpp  font-stub.cpp  font-wingdi.cpp  host-backend-glfw.cpp  host-backend-sdl2.cpp  host-backend-sdl3.cpp  host-backend-win32.cpp  host-native.cpp  host-render-dx11.cpp  host-render-gl3.cpp  host-render-vulkan.cpp  host-render.hpp  host.cpp  icon.cpp  id.cpp  input.cpp  interact.cpp  length.cpp  listbox.cpp  (+22 more)
src/internal/: draw-utils.cpp  draw-utils.hpp  font-engine.cpp  font-engine.hpp  font-win32-dwrite.hpp  split-label.cpp  split-label.hpp  strconv-win32.hpp
